Fixed some issues with flask and postgres. Major cleanup is in order

--- a/notebooks/abyss_request_testing.ipynb
+++ b/notebooks/abyss_request_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "fatty-fetish",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "incident-crime",
    "metadata": {},
    "outputs": [
@@ -23,11 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please paste the following URL in a browser:\n",
-      "https://auth.globus.org/v2/oauth2/authorize?client_id=7414f0b4-7d05-4bb6-bb00-076fa3f17cf5&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=urn%3Aglobus%3Aauth%3Ascope%3Atransfer.api.globus.org%3Aall+https%3A%2F%2Fauth.globus.org%2Fscopes%2Ffacd7ccc-c5f4-42aa-916b-a0e270e2c2a9%2Fall+email+openid&state=_default&response_type=code&code_challenge=77PuEbEZvWEG1y-pGMxqtS12OOnA6oATyC595VtHEf0&code_challenge_method=S256&access_type=online&prefill_named_grant=My+App+Login\n",
-      "Please Paste your Auth Code Below: \n",
-      "2oqO0LaEOU4bVS49ta6aeZ7hKyNzsi\n",
-      "Headers: {'Authorization': 'Bearer Ag1OxKqaDBJP61zavMnvbnvVn2DPGPdrXdk0ln7E7Prpmv64Y7F2C9QPerYkOoxVO6xQDow4aq6o2JC4qJ7JxHx9v0', 'Transfer': 'AgMpYgW2KV1ymwd6kJl2XVb6e6vE8Mrbq94nm4jj7G7zeaKMBhOCY5862qrppn5jPJX4083abwJ9bCvkedegf0onk', 'FuncX': 'Ag1OxKqaDBJP61zavMnvbnvVn2DPGPdrXdk0ln7E7Prpmv64Y7F2C9QPerYkOoxVO6xQDow4aq6o2JC4qJ7JxHx9v0'}\n"
+      "Headers: {'Authorization': 'Bearer AgkqmOyqE32JwKKbb0dWk3O6QWDEK40GVykrmvgXX8aQ2yQOvViOCqD4Jg1a3a0lB41ozD6eY0gDrptjmnWnlSdwMV', 'Transfer': 'AgVPGlGXXWMg6q2WWPmpj8aX6w2qkQNXvJE39vxMjxaplo5G3dcbCOVqexqmezdrEKn9GDOzzBBvxxtl1e6e8HpD3o', 'FuncX': 'AgkqmOyqE32JwKKbb0dWk3O6QWDEK40GVykrmvgXX8aQ2yQOvViOCqD4Jg1a3a0lB41ozD6eY0gDrptjmnWnlSdwMV'}\n"
      ]
     }
    ],
@@ -48,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "attractive-proportion",
    "metadata": {},
    "outputs": [],
@@ -58,7 +54,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
+   "id": "selective-clearing",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                              full_path  size_bytes extension  \\\n",
+      "1714  /UMich/download/DeepBlueData_79407x76d/fig07.t...       18068        gz   \n",
+      "\n",
+      "           label              file_uuid  \n",
+      "1714  compressed  63d78453_fig07.tar.gz  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "deep_blue_crawl_df = pd.read_csv(\"/Users/ryan/Documents/CS/abyss/data/deep_blue_crawl.csv\")\n",
+    "\n",
+    "filtered_files = deep_blue_crawl_df[deep_blue_crawl_df.extension == \"gz\"].sort_values(by=[\"size_bytes\"]).iloc[0:1]\n",
+    "print(filtered_files)\n",
+    "\n",
+    "\n",
+    "workers = [{\"globus_eid\": \"f4e2f5a4-a186-11eb-8a91-d70d98a40c8d\",\n",
+    "            \"funcx_eid\": \"66dab10e-d323-41e1-8f4a-4bfc3204357e\",\n",
+    "            \"max_available_space\": 3*10**9,\n",
+    "            \"transfer_dir\": \"/home/tskluzac/ryan/deep_blue_data\",\n",
+    "            \"decompress_dir\": \"/home/tskluzac/ryan/results\"}]\n",
+    "\n",
+    "compressed_files = [{\"file_path\": x[0], \"compressed_size\": x[1]} for _, x in filtered_files.iterrows()]\n",
+    "# compressed_files = [{\"file_path\": \"/UMich/download/DeepBlueData_gt54kn05f/NAmerica_current_30arcsec_generic_set1.zip\", \"compressed_size\": 290392819}]\n",
+    "transfer_token = 'AgVPGlGXXWMg6q2WWPmpj8aX6w2qkQNXvJE39vxMjxaplo5G3dcbCOVqexqmezdrEKn9GDOzzBBvxxtl1e6e8HpD3o'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "expanded-congress",
    "metadata": {},
    "outputs": [
@@ -66,15 +100,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "6661e2bb-7f18-45d2-9b77-b734f64e4d37\n"
      ]
     }
    ],
    "source": [
-    "url = f\"{abyss_url}/\"\n",
+    "url = f\"{abyss_url}/launch\"\n",
     "headers = {'Authorization': f\"Bearer {funcx_token}\",'Transfer': transfer_token, 'FuncX': f\"{funcx_token}\"}\n",
-    "response = requests.get(url, headers=headers)\n",
-    "print(response.text)"
+    "params = {\"globus_source_eid\": \"4f99675c-ac1f-11ea-bee8-0e716405a293\",\n",
+    "         \"transfer_token\": transfer_token,\n",
+    "         \"compressed_files\": compressed_files,\n",
+    "         \"worker_params\": workers}\n",
+    "response = requests.post(url, headers=headers, json=params)\n",
+    "abyss_id = response.text\n",
+    "print(abyss_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "abstract-china",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'abyss_id': '6661e2bb-7f18-45d2-9b77-b734f64e4d37', 'client_id': '7414f0b4-7d05-4bb6-bb00-076fa3f17cf5', 'consolidating': 0, 'crawl_status': None, 'crawling': 0, 'decompressed': 0, 'decompressing': 0, 'failed': 0, 'predicted': 0, 'prefetched': 0, 'prefetching': 1, 'processing_headers': 0, 'scheduled': 0, 'succeeded': 0, 'unpredicted': 0, 'unpredicted_predict': 0, 'unpredicted_prefetched': 0, 'unpredicted_prefetching': 0, 'unpredicted_schedule': 0, 'unpredicted_scheduled': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = f\"{abyss_url}/get_status\"\n",
+    "headers = {'Authorization': f\"Bearer {funcx_token}\",'Transfer': transfer_token, 'FuncX': f\"{funcx_token}\"}\n",
+    "status_request = {\"abyss_id\": abyss_id}\n",
+    "response = requests.get(url, headers=headers, json={\"abyss_id\": abyss_id})\n",
+    "print(response.json())"
    ]
   },
   {
