--- a/notebooks/abyss_request_testing.ipynb
+++ b/notebooks/abyss_request_testing.ipynb
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "selective-clearing",
+   "id": "nasty-racing",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "id": "expanded-congress",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6661e2bb-7f18-45d2-9b77-b734f64e4d37\n"
+      "b9f17bb8-5bbc-4076-87cf-8bbf75a1f7e3\n"
      ]
     }
    ],
@@ -110,7 +110,8 @@
     "params = {\"globus_source_eid\": \"4f99675c-ac1f-11ea-bee8-0e716405a293\",\n",
     "         \"transfer_token\": transfer_token,\n",
     "         \"compressed_files\": compressed_files,\n",
-    "         \"worker_params\": workers}\n",
+    "         \"worker_params\": workers,\n",
+    "         \"prediction_mode\": \"header\"}\n",
     "response = requests.post(url, headers=headers, json=params)\n",
     "abyss_id = response.text\n",
     "print(abyss_id)"
@@ -118,15 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "abstract-china",
+   "execution_count": 70,
+   "id": "french-costume",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'abyss_id': '6661e2bb-7f18-45d2-9b77-b734f64e4d37', 'client_id': '7414f0b4-7d05-4bb6-bb00-076fa3f17cf5', 'consolidating': 0, 'crawl_status': None, 'crawling': 0, 'decompressed': 0, 'decompressing': 0, 'failed': 0, 'predicted': 0, 'prefetched': 0, 'prefetching': 1, 'processing_headers': 0, 'scheduled': 0, 'succeeded': 0, 'unpredicted': 0, 'unpredicted_predict': 0, 'unpredicted_prefetched': 0, 'unpredicted_prefetching': 0, 'unpredicted_schedule': 0, 'unpredicted_scheduled': 0}\n"
+      "{'abyss_id': 'b9f17bb8-5bbc-4076-87cf-8bbf75a1f7e3', 'client_id': '7414f0b4-7d05-4bb6-bb00-076fa3f17cf5', 'consolidating': 0, 'crawl_status': None, 'crawling': 0, 'decompressed': 0, 'decompressing': 0, 'failed': 0, 'predicted': 0, 'prefetched': 0, 'prefetching': 0, 'processing_headers': 0, 'scheduled': 0, 'succeeded': 1, 'unpredicted': 0, 'unpredicted_predict': 0, 'unpredicted_prefetched': 0, 'unpredicted_prefetching': 0, 'unpredicted_schedule': 0, 'unpredicted_scheduled': 0}\n"
      ]
     }
    ],
