Fixes for production

--- a/notebooks/abyss_request_testing.ipynb
+++ b/notebooks/abyss_request_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 113,
    "id": "fatty-fetish",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 155,
    "id": "incident-crime",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Headers: {'Authorization': 'Bearer AgkqmOyqE32JwKKbb0dWk3O6QWDEK40GVykrmvgXX8aQ2yQOvViOCqD4Jg1a3a0lB41ozD6eY0gDrptjmnWnlSdwMV', 'Transfer': 'AgVPGlGXXWMg6q2WWPmpj8aX6w2qkQNXvJE39vxMjxaplo5G3dcbCOVqexqmezdrEKn9GDOzzBBvxxtl1e6e8HpD3o', 'FuncX': 'AgkqmOyqE32JwKKbb0dWk3O6QWDEK40GVykrmvgXX8aQ2yQOvViOCqD4Jg1a3a0lB41ozD6eY0gDrptjmnWnlSdwMV'}\n"
+      "Headers: {'Authorization': 'Bearer AgBaJ9gBvoKpg2G0n4aqOzXmD6PKqaKrKMeY1x7Y6bOmmGj5wKIyCBEQbn9bboGb2MQBQWKMoNvxD7ukVoEwbuMx4j', 'Transfer': 'AgEqE5QBmdy5NBEyqM1Gx2N4mN299MWN0Y2pPjOvNxqGjMEBpyiwCegxa3MnylpyjDYoQ1bXKjmVYyTygwbYkcp5gz', 'FuncX': 'AgBaJ9gBvoKpg2G0n4aqOzXmD6PKqaKrKMeY1x7Y6bOmmGj5wKIyCBEQbn9bboGb2MQBQWKMoNvxD7ukVoEwbuMx4j'}\n"
      ]
     }
    ],
@@ -44,29 +44,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 156,
    "id": "attractive-proportion",
    "metadata": {},
    "outputs": [],
    "source": [
-    "abyss_url = \"http://127.0.0.1:5000\""
+    "ec2_abyss_url = \"http://ec2-54-173-239-173.compute-1.amazonaws.com:5000/\"\n",
+    "abyss_url = \"http://127.0.0.1:5000/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "nasty-racing",
+   "execution_count": 190,
+   "id": "posted-nancy",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                              full_path  size_bytes extension  \\\n",
-      "1714  /UMich/download/DeepBlueData_79407x76d/fig07.t...       18068        gz   \n",
-      "\n",
-      "           label              file_uuid  \n",
-      "1714  compressed  63d78453_fig07.tar.gz  \n"
+      "2662\n"
      ]
     }
    ],
@@ -75,24 +72,60 @@
     "\n",
     "deep_blue_crawl_df = pd.read_csv(\"/Users/ryan/Documents/CS/abyss/data/deep_blue_crawl.csv\")\n",
     "\n",
-    "filtered_files = deep_blue_crawl_df[deep_blue_crawl_df.extension == \"gz\"].sort_values(by=[\"size_bytes\"]).iloc[0:1]\n",
-    "print(filtered_files)\n",
+    "max_size = 10*10**9\n",
+    "cur_size = 0\n",
+    "idx = 0\n",
+    "\n",
+    "sorted_files = deep_blue_crawl_df.sort_values(by=[\"size_bytes\"])\n",
+    "\n",
+    "while max_size > cur_size:\n",
+    "    file = sorted_files.iloc[idx]\n",
+    "    idx += 1\n",
+    "    cur_size += file.size_bytes\n",
+    "    \n",
+    "\n",
+    "filtered_files = sorted_files.iloc[0:idx]\n",
+    "# print(filtered_files)\n",
+    "\n",
+    "jetstream_worker = \"66dab10e-d323-41e1-8f4a-4bfc3204357e\"\n",
+    "midway_worker = \"18bd4de8-7a24-410c-a176-8fdd0188cb32\"\n",
     "\n",
     "\n",
-    "workers = [{\"globus_eid\": \"f4e2f5a4-a186-11eb-8a91-d70d98a40c8d\",\n",
-    "            \"funcx_eid\": \"66dab10e-d323-41e1-8f4a-4bfc3204357e\",\n",
+    "workers = [{\"globus_eid\": \"af7bda53-6d04-11e5-ba46-22000b92c6ec\",\n",
+    "            \"funcx_eid\": midway_worker,\n",
     "            \"max_available_space\": 3*10**9,\n",
-    "            \"transfer_dir\": \"/home/tskluzac/ryan/deep_blue_data\",\n",
-    "            \"decompress_dir\": \"/home/tskluzac/ryan/results\"}]\n",
+    "            \"transfer_dir\": \"/project2/chard/skluzacek/ryan-data/transfer_dir\",\n",
+    "            \"decompress_dir\": \"/project2/chard/skluzacek/ryan-data/decompress_dir\"}]\n",
     "\n",
     "compressed_files = [{\"file_path\": x[0], \"compressed_size\": x[1]} for _, x in filtered_files.iterrows()]\n",
     "# compressed_files = [{\"file_path\": \"/UMich/download/DeepBlueData_gt54kn05f/NAmerica_current_30arcsec_generic_set1.zip\", \"compressed_size\": 290392819}]\n",
-    "transfer_token = 'AgVPGlGXXWMg6q2WWPmpj8aX6w2qkQNXvJE39vxMjxaplo5G3dcbCOVqexqmezdrEKn9GDOzzBBvxxtl1e6e8HpD3o'"
+    "transfer_token = 'AgEqE5QBmdy5NBEyqM1Gx2N4mN299MWN0Y2pPjOvNxqGjMEBpyiwCegxa3MnylpyjDYoQ1bXKjmVYyTygwbYkcp5gz'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 167,
+   "id": "tested-taxation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = f\"{ec2_abyss_url}\"\n",
+    "headers = {'Authorization': f\"Bearer {funcx_token}\",'Transfer': transfer_token, 'FuncX': f\"{funcx_token}\"}\n",
+    "response = requests.get(url, headers=headers)\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
    "id": "expanded-congress",
    "metadata": {},
    "outputs": [
@@ -100,12 +133,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b9f17bb8-5bbc-4076-87cf-8bbf75a1f7e3\n"
+      "47907edf-a3c8-4b00-8bf3-db9eb86b8b69\n"
      ]
     }
    ],
    "source": [
-    "url = f\"{abyss_url}/launch\"\n",
+    "url = f\"{ec2_abyss_url}/launch\"\n",
     "headers = {'Authorization': f\"Bearer {funcx_token}\",'Transfer': transfer_token, 'FuncX': f\"{funcx_token}\"}\n",
     "params = {\"globus_source_eid\": \"4f99675c-ac1f-11ea-bee8-0e716405a293\",\n",
     "         \"transfer_token\": transfer_token,\n",
@@ -119,24 +152,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "french-costume",
+   "execution_count": 169,
+   "id": "ancient-merchandise",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'abyss_id': 'b9f17bb8-5bbc-4076-87cf-8bbf75a1f7e3', 'client_id': '7414f0b4-7d05-4bb6-bb00-076fa3f17cf5', 'consolidating': 0, 'crawl_status': None, 'crawling': 0, 'decompressed': 0, 'decompressing': 0, 'failed': 0, 'predicted': 0, 'prefetched': 0, 'prefetching': 0, 'processing_headers': 0, 'scheduled': 0, 'succeeded': 1, 'unpredicted': 0, 'unpredicted_predict': 0, 'unpredicted_prefetched': 0, 'unpredicted_prefetching': 0, 'unpredicted_schedule': 0, 'unpredicted_scheduled': 0}\n"
+      "{'abyss_id': '47907edf-a3c8-4b00-8bf3-db9eb86b8b69', 'client_id': '7414f0b4-7d05-4bb6-bb00-076fa3f17cf5', 'consolidating': 0, 'crawl_status': None, 'crawling': 0, 'decompressed': 0, 'decompressing': 0, 'failed': 0, 'predicted': 0, 'prefetched': 0, 'prefetching': 0, 'processing_headers': 0, 'scheduled': 0, 'succeeded': 1, 'unpredicted': 0, 'unpredicted_predict': 0, 'unpredicted_prefetched': 0, 'unpredicted_prefetching': 0, 'unpredicted_schedule': 0, 'unpredicted_scheduled': 0}\n"
      ]
     }
    ],
    "source": [
-    "url = f\"{abyss_url}/get_status\"\n",
+    "url = f\"{ec2_abyss_url}/get_status\"\n",
     "headers = {'Authorization': f\"Bearer {funcx_token}\",'Transfer': transfer_token, 'FuncX': f\"{funcx_token}\"}\n",
     "status_request = {\"abyss_id\": abyss_id}\n",
     "response = requests.get(url, headers=headers, json={\"abyss_id\": abyss_id})\n",
     "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "seventh-camel",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'/UMich/download/DeepBlueData_79407x76d/fig07.tar.gz': {'compressed_path': '/UMich/download/DeepBlueData_79407x76d/fig07.tar.gz', 'decompressed_size': 51200, 'files': ['fig07.tar'], 'metadata': [{'compressed_metadata': {'compressed_path': 'a92b793d-39f0-44aa-9976-29800d1acc16/fig07.tar', 'decompressed_size': 38177, 'files': ['fig07/._ssa_60_2.14.17.pdf', 'fig07/._feb14_data.py', 'fig07/ssa_60_2.14.17.pdf', 'fig07/feb14_data.py'], 'metadata': [{'file_path': 'fig07/._ssa_60_2.14.17.pdf', 'physical': {'extension': '.pdf', 'is_compressed': False, 'size': 233}}, {'file_path': 'fig07/._feb14_data.py', 'physical': {'extension': '.py', 'is_compressed': False, 'size': 211}}, {'file_path': 'fig07/ssa_60_2.14.17.pdf', 'physical': {'extension': '.pdf', 'is_compressed': False, 'size': 20967}}, {'file_path': 'fig07/feb14_data.py', 'physical': {'extension': '.py', 'is_compressed': False, 'size': 16766}}], 'root_path': '557dd83f-e48a-4fb2-9901-d690b50edc96', 'status': 'CONSOLIDATING'}, 'file_path': 'fig07.tar', 'physical': {'decompressed_size': 38177, 'extension': '.tar', 'is_compressed': True, 'size': 51200}}], 'root_path': 'a92b793d-39f0-44aa-9976-29800d1acc16', 'status': 'CONSOLIDATING'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = f\"{ec2_abyss_url}/get_metadata\"\n",
+    "headers = {'Authorization': f\"Bearer {funcx_token}\",'Transfer': transfer_token, 'FuncX': f\"{funcx_token}\"}\n",
+    "params = {\"abyss_id\": abyss_id}\n",
+    "response = requests.get(url, headers=headers, json=params)\n",
+    "metadata = response.json()\n",
+    "\n",
+    "print(metadata)"
    ]
   },
   {
