--- a/notebooks/abyss_request_testing.ipynb
+++ b/notebooks/abyss_request_testing.ipynb
@@ -55,18 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "id": "posted-nancy",
+   "execution_count": 196,
+   "id": "acknowledged-craps",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2662\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -76,7 +68,7 @@
     "cur_size = 0\n",
     "idx = 0\n",
     "\n",
-    "sorted_files = deep_blue_crawl_df.sort_values(by=[\"size_bytes\"])\n",
+    "sorted_files = deep_blue_crawl_df[deep_blue_crawl_df.extension.isin([\"gz\", \"tar\", \"zip\"])].sort_values(by=[\"size_bytes\"])\n",
     "\n",
     "while max_size > cur_size:\n",
     "    file = sorted_files.iloc[idx]\n",
@@ -84,7 +76,7 @@
     "    cur_size += file.size_bytes\n",
     "    \n",
     "\n",
-    "filtered_files = sorted_files.iloc[0:idx]\n",
+    "filtered_files = sorted_files.iloc[0:10]\n",
     "# print(filtered_files)\n",
     "\n",
     "jetstream_worker = \"66dab10e-d323-41e1-8f4a-4bfc3204357e\"\n",
@@ -97,6 +89,12 @@
     "            \"transfer_dir\": \"/project2/chard/skluzacek/ryan-data/transfer_dir\",\n",
     "            \"decompress_dir\": \"/project2/chard/skluzacek/ryan-data/decompress_dir\"}]\n",
     "\n",
+    "workers = [{\"globus_eid\": \"f4e2f5a4-a186-11eb-8a91-d70d98a40c8d\",\n",
+    "            \"funcx_eid\": jetstream_worker,\n",
+    "            \"max_available_space\": 3*10**9,\n",
+    "            \"transfer_dir\": \"/home/tskluzac/ryan/deep_blue_data\",\n",
+    "            \"decompress_dir\": \"/home/tskluzac/ryan/results\"}]\n",
+    "\n",
     "compressed_files = [{\"file_path\": x[0], \"compressed_size\": x[1]} for _, x in filtered_files.iterrows()]\n",
     "# compressed_files = [{\"file_path\": \"/UMich/download/DeepBlueData_gt54kn05f/NAmerica_current_30arcsec_generic_set1.zip\", \"compressed_size\": 290392819}]\n",
     "transfer_token = 'AgEqE5QBmdy5NBEyqM1Gx2N4mN299MWN0Y2pPjOvNxqGjMEBpyiwCegxa3MnylpyjDYoQ1bXKjmVYyTygwbYkcp5gz'"
@@ -105,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "tested-taxation",
+   "id": "blank-contributor",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 197,
    "id": "expanded-congress",
    "metadata": {},
    "outputs": [
@@ -133,18 +131,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "47907edf-a3c8-4b00-8bf3-db9eb86b8b69\n"
+      "1247b4cf-9b18-4064-aef0-5ca2e7eb4763\n"
      ]
     }
    ],
    "source": [
-    "url = f\"{ec2_abyss_url}/launch\"\n",
+    "url = f\"{abyss_url}/launch\"\n",
     "headers = {'Authorization': f\"Bearer {funcx_token}\",'Transfer': transfer_token, 'FuncX': f\"{funcx_token}\"}\n",
     "params = {\"globus_source_eid\": \"4f99675c-ac1f-11ea-bee8-0e716405a293\",\n",
     "         \"transfer_token\": transfer_token,\n",
     "         \"compressed_files\": compressed_files,\n",
     "         \"worker_params\": workers,\n",
-    "         \"prediction_mode\": \"header\"}\n",
+    "         \"prediction_mode\": \"ml\"}\n",
     "response = requests.post(url, headers=headers, json=params)\n",
     "abyss_id = response.text\n",
     "print(abyss_id)"
@@ -152,20 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "id": "ancient-merchandise",
+   "execution_count": 198,
+   "id": "smaller-robert",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'abyss_id': '47907edf-a3c8-4b00-8bf3-db9eb86b8b69', 'client_id': '7414f0b4-7d05-4bb6-bb00-076fa3f17cf5', 'consolidating': 0, 'crawl_status': None, 'crawling': 0, 'decompressed': 0, 'decompressing': 0, 'failed': 0, 'predicted': 0, 'prefetched': 0, 'prefetching': 0, 'processing_headers': 0, 'scheduled': 0, 'succeeded': 1, 'unpredicted': 0, 'unpredicted_predict': 0, 'unpredicted_prefetched': 0, 'unpredicted_prefetching': 0, 'unpredicted_schedule': 0, 'unpredicted_scheduled': 0}\n"
+      "{'abyss_id': '1247b4cf-9b18-4064-aef0-5ca2e7eb4763', 'client_id': '7414f0b4-7d05-4bb6-bb00-076fa3f17cf5', 'consolidating': 0, 'crawl_status': None, 'crawling': 0, 'decompressed': 0, 'decompressing': 0, 'failed': 0, 'predicted': 0, 'prefetched': 0, 'prefetching': 0, 'processing_headers': 0, 'scheduled': 0, 'succeeded': 10, 'unpredicted': 0, 'unpredicted_predict': 0, 'unpredicted_prefetched': 0, 'unpredicted_prefetching': 0, 'unpredicted_schedule': 0, 'unpredicted_scheduled': 0}\n"
      ]
     }
    ],
    "source": [
-    "url = f\"{ec2_abyss_url}/get_status\"\n",
+    "url = f\"{abyss_url}/get_status\"\n",
     "headers = {'Authorization': f\"Bearer {funcx_token}\",'Transfer': transfer_token, 'FuncX': f\"{funcx_token}\"}\n",
     "status_request = {\"abyss_id\": abyss_id}\n",
     "response = requests.get(url, headers=headers, json={\"abyss_id\": abyss_id})\n",
@@ -174,20 +172,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "seventh-camel",
+   "execution_count": 202,
+   "id": "liquid-cardiff",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'/UMich/download/DeepBlueData_79407x76d/fig07.tar.gz': {'compressed_path': '/UMich/download/DeepBlueData_79407x76d/fig07.tar.gz', 'decompressed_size': 51200, 'files': ['fig07.tar'], 'metadata': [{'compressed_metadata': {'compressed_path': 'a92b793d-39f0-44aa-9976-29800d1acc16/fig07.tar', 'decompressed_size': 38177, 'files': ['fig07/._ssa_60_2.14.17.pdf', 'fig07/._feb14_data.py', 'fig07/ssa_60_2.14.17.pdf', 'fig07/feb14_data.py'], 'metadata': [{'file_path': 'fig07/._ssa_60_2.14.17.pdf', 'physical': {'extension': '.pdf', 'is_compressed': False, 'size': 233}}, {'file_path': 'fig07/._feb14_data.py', 'physical': {'extension': '.py', 'is_compressed': False, 'size': 211}}, {'file_path': 'fig07/ssa_60_2.14.17.pdf', 'physical': {'extension': '.pdf', 'is_compressed': False, 'size': 20967}}, {'file_path': 'fig07/feb14_data.py', 'physical': {'extension': '.py', 'is_compressed': False, 'size': 16766}}], 'root_path': '557dd83f-e48a-4fb2-9901-d690b50edc96', 'status': 'CONSOLIDATING'}, 'file_path': 'fig07.tar', 'physical': {'decompressed_size': 38177, 'extension': '.tar', 'is_compressed': True, 'size': 51200}}], 'root_path': 'a92b793d-39f0-44aa-9976-29800d1acc16', 'status': 'CONSOLIDATING'}}\n"
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-202-76df58a59756>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"abyss_id\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mabyss_id\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmetadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/abyss/lib/python3.7/site-packages/requests/models.py\u001b[0m in \u001b[0;36mjson\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    898\u001b[0m                     \u001b[0;31m# used.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    899\u001b[0m                     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 900\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mcomplexjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    901\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    902\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/abyss/lib/python3.7/json/__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    346\u001b[0m             \u001b[0mparse_int\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mparse_float\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    347\u001b[0m             parse_constant is None and object_pairs_hook is None and not kw):\n\u001b[0;32m--> 348\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_default_decoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    349\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    350\u001b[0m         \u001b[0mcls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mJSONDecoder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/abyss/lib/python3.7/json/decoder.py\u001b[0m in \u001b[0;36mdecode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m         \"\"\"\n\u001b[0;32m--> 337\u001b[0;31m         \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw_decode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    338\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/abyss/lib/python3.7/json/decoder.py\u001b[0m in \u001b[0;36mraw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    353\u001b[0m             \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscan_once\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    354\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 355\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mJSONDecodeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Expecting value\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    356\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
      ]
     }
    ],
    "source": [
-    "url = f\"{ec2_abyss_url}/get_metadata\"\n",
+    "url = f\"{abyss_url}/get_metadata\"\n",
     "headers = {'Authorization': f\"Bearer {funcx_token}\",'Transfer': transfer_token, 'FuncX': f\"{funcx_token}\"}\n",
     "params = {\"abyss_id\": abyss_id}\n",
     "response = requests.get(url, headers=headers, json=params)\n",
